# ruuvi.air.main

./: .gitignore  .gitmodules  BUILD_VERSIONS  CMakeLists.txt  Dockerfile  Kconfig  README.md  build.sh  build_all.sh  build_nrf52840dk_a1_debug.sh  build_nrf52840dk_a1_debug_mock.sh  build_nrf52840dk_a1_release-dev.sh  build_nrf52840dk_a1_release_mock-dev.sh  build_nrf52840dk_a2_debug.sh  build_nrf52840dk_a2_debug_mock.sh  build_nrf52840dk_a2_debug_mock_df_e0_f0.sh  build_nrf52840dk_a2_release-dev.sh  build_nrf52840dk_a2_release_mock-dev.sh  build_nrf52840dk_a2_release_mock_df_e0_f0-dev.sh  build_nrf52840dk_hw1_debug.sh  build_nrf52840dk_hw1_debug_mock.sh  build_nrf52840dk_hw1_release.sh  build_nrf52840dk_hw1_release_mock.sh  build_nrf52840dk_hw2_debug.sh  build_nrf52840dk_hw2_debug_mock.sh  build_nrf52840dk_hw2_debug_mock_df_e0_f0.sh  build_nrf52840dk_hw2_release.sh  build_nrf52840dk_hw2_release_mock.sh  build_nrf52840dk_hw2_release_mock_df_e0_f0.sh  build_ruuviair_a1_debug.sh  build_ruuviair_a1_release-dev.sh  build_ruuviair_a1_release-prod.sh  build_ruuviair_a1_release_df_e0_f0.sh  build_ruuviair_a2_debug.sh  build_ruuviair_a2_release-dev.sh  build_ruuviair_a2_release-prod.sh  build_ruuviair_a2_release_df_e0_f0.sh  build_ruuviair_a3_debug.sh  build_ruuviair_a3_debug_fw_led_cycle_calibrate.sh  build_ruuviair_a3_debug_fw_led_cycle_rgbw.sh  (+51 more)
.github/workflows/: build-direct_test_mode.yml  build-fw_nrf52840dk_a2_release_mock.yml  build-fw_nrf52840dk_hw2_release_mock.yml  build-fw_ruuviair_a1-dev.yml  build-fw_ruuviair_a2-dev.yml  build-fw_ruuviair_a2-prod.yml  build-fw_ruuviair_a3-dev.yml  build-fw_ruuviair_a3-prod.yml  build-fw_ruuviair_hw1.yml  build-fw_ruuviair_hw2-dev.yml  build-fw_ruuviair_hw2-prod.yml  build-ruuvi_air_rgb_ctrl.yml  build-ruuvi_hw_tester.yml  code-style.yml  docker-publish.yml  sonar-scan.yml  unit-tests-native_sim.yml  unit-tests-native_sim64.yml  unit-tests-nrf52840dk.yml  unit-tests-ruuvi_air.yml  unit-tests.yml
b0_release/v1.0.6/ruuviair_hw2_release-dev/: merged.ext_flash.hex  merged.hex
b0_release/v1.0.6/ruuviair_hw2_release-prod/: merged.ext_flash.hex  merged.hex
boards/nordic/nrf52840dk_ruuviair/: Kconfig.defconfig  Kconfig.nrf52840dk_ruuviair  board.yml  nrf52840dk_ruuviair_nrf52840-pinctrl.dtsi  nrf52840dk_ruuviair_nrf52840.dts  nrf52840dk_ruuviair_nrf52840.yaml  nrf52840dk_ruuviair_nrf52840_1.overlay  nrf52840dk_ruuviair_nrf52840_2.conf  nrf52840dk_ruuviair_nrf52840_2.overlay
boards/ruuvi/ruuviair/: Kconfig.defconfig  Kconfig.ruuvi_ruuviair  board.yml  ruuvi_ruuviair-pinctrl.dtsi  ruuvi_ruuviair.dts  ruuvi_ruuviair.yaml  ruuvi_ruuviair_nrf52840_1.overlay  ruuvi_ruuviair_nrf52840_1_defconfig  ruuvi_ruuviair_nrf52840_2.overlay  ruuvi_ruuviair_nrf52840_2_defconfig
cmake/modules/: gen_version.cmake  git.cmake  git_describe_tag.cmake
components/embedded-i2c-sen66-master/: .clang-format  .gitignore  CHANGELOG.md  README.md  metadata.yml  sen66_i2c.c  sen66_i2c.h  sensirion_i2c_hal.c  sensirion_i2c_hal.h
components/embedded-i2c-sen66-master/example-usage/: Makefile  (+1 more)
drivers/: CMakeLists.txt  Kconfig
drivers/lp5810/: CMakeLists.txt  Kconfig  lp5810.c
drivers/opt4060/: CMakeLists.txt  Kconfig  opt4060.c  opt4060_int.c  opt4060_internal.h
drivers/rtc_pcf85263a/: CMakeLists.txt  Kconfig  rtc_pcf85263a.c  rtc_pcf85263a_regs.h
drivers/zephyr/: module.yml
dsp/: dsp_arm_biquad_cascade_df1_q15_patched.c  dsp_arm_biquad_cascade_df1_q15_patched.c.diff  dsp_arm_biquad_cascade_df1_q15_patched.h
include/: ruuvi_fa_id.h  ruuvi_fw_update.h  ruuvi_image_tlv.h  sys_utils.h  zephyr_api.h
ruuvi_air_led_calibration/: .gitignore  README.md  emit_led_calibration_c.py  join_rgb_triplets.py  luminosity_solver.py  opt4060_approximate_red.py  opt4060_filter.py  opt4060_log_to_csv.py  process_calibration_log.sh  stage_1_calibration_data.csv  stage_2_filtered_data.csv  stage_3_joined_rgbw.csv  stage_4_with_approximated_red.csv  stage_5_result.csv
ruuvi_air_rgb_ctrl/: .gitignore  README.md  requirements.txt  ruuvi_air_rgb_ctrl.bat  ruuvi_air_rgb_ctrl.py  ruuvi_air_rgb_ctrl.sh
scripts/: calc_freq_a_weighting_coeffs.py  clang_format_all.sh  clang_format_all_check.sh  draw_plot_dsp_filter_a_weighting.py  draw_plot_dsp_rms.py  dt-format.py  run-dt-format.sh  sonar_scan.sh
src/: api.c  api.h  app_button.c  app_button.h  app_button_cb.c  app_button_cb.h  app_early_init.c  app_ext_flash_and_sensors_power.c  app_ext_flash_and_sensors_power.h  app_fw_ver.c  app_fw_ver.h  app_gpio_input.c  app_gpio_input.h  app_led.c  app_led.h  app_mcumgr_mgmt_callbacks.c  app_mcumgr_mgmt_callbacks.h  app_rtc.c  app_rtc.h  app_segger_rtt.c  app_segger_rtt.h  app_settings.c  app_settings.h  app_supercap.c  app_supercap.h  app_watchdog.c  app_watchdog.h  aqi.c  aqi.h  avg_accum.c  avg_accum.h  ble_adv.c  ble_adv.h  ble_mgmt_hooks.c  ble_mgmt_hooks.h  data_fmt_6.c  data_fmt_6.h  data_fmt_e0.c  data_fmt_e0.h  data_fmt_e1.c  (+48 more)
sysbuild/: b0.conf  mcuboot.conf
sysbuild/b0/: dts_common.overlay  dts_nrf52840dk.overlay  dts_nrf52840dk_hw1.overlay  prj.conf
sysbuild/mcuboot/: dts_common.overlay  dts_nrf52840dk.overlay  prj.conf
tests/ztest/test_draw_plot_dsp_filter_a_weighting/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ztest/test_draw_plot_dsp_filter_a_weighting/src/: helpers.c  helpers.h  test_draw_plot_dsp_filter_a_weighting_16000.c  test_draw_plot_dsp_filter_a_weighting_20828.c
tests/ztest/test_dsp/: CMakeLists.txt  Kconfig  testcase.yaml
tests/ztest/test_dsp/src/: test_dsp_biquad_filter_a_weighting_16000.c  test_dsp_rms.c
tests/ztest/test_example2/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ztest/test_example2/src/: example_test.c  framework_tests.c
tests/ztest/test_example2/src/foo/: foo.h
tests/ztest/test_example2/src/uut/: uut.c
tests/ztest/test_moving_avg/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ztest/test_moving_avg/src/: test_avg_accum.c  test_moving_avg.c  zassert.h
tests/ztest/test_spl_calc/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/ztest/test_spl_calc/src/: test_spl_calc.c  zassert.h
(+32 files in other folders)
